--- a/MarsRealEstate/app/src/main/AndroidManifest.xml
+++ b/MarsRealEstate/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="br.com.tarcisiofl.marsrealestate">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
